# sphinx-cmake

./: LICENSE  README.md  build_config.py  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
cmake/: FindSphinx.cmake
doc/: api_reference.rst  conf.py  glossary.rst  index.rst  installing.rst  integration.rst  introduction.rst  tutorial.rst
doc/release/: release_notes.rst
test/: CMakeLists.txt
test/01-simple-html/: CMakeLists.txt
test/02-simple-html-with-target/: CMakeLists.txt
test/03-simple-text-isolated/: CMakeLists.txt  index.txt
test/04-set-conf-dir/: CMakeLists.txt
test/04-set-conf-dir/config/: conf.py
test/05-set-source-dir/: CMakeLists.txt
test/06-set-output-dir/: CMakeLists.txt  index.html  index.rst
test/07-use-define/: CMakeLists.txt  conf.py
test/resources/_templates/: layout.html
